Fix up hosted page button styles - so the onward journey see more button is white with a hover state

--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -129,14 +129,12 @@ $hosted-video-height: 540px;
 }
 
 .hosted-page--bright {
-    .hosted-tone-btn {
-        &,
-        &:focus,
-        &:hover {
-            color: #ffffff;
-            svg {
-                fill: #ffffff;
-            }
+    .hosted__banner .hosted-tone-btn,
+    .hosted-tone-btn:focus,
+    .hosted-tone-btn:hover {
+        color: #ffffff;
+        svg {
+            fill: #ffffff;
         }
     }
 
@@ -726,6 +724,7 @@ $hosted-video-height: 540px;
     .hosted-page:not(.hosted-page--bright) & {
         background-color: #ffffff;
         border-color: #ffffff;
+        color: #333333;
     }
 }
 
