use externalEmbedUrl value

--- a/common/app/views/fragments/atoms/ampYoutube.scala.html
+++ b/common/app/views/fragments/atoms/ampYoutube.scala.html
@@ -1,12 +1,12 @@
 @(media: model.content.MediaAtom)(implicit request: RequestHeader)
-
+@import conf.Configuration
 
     <amp-iframe
     sandbox="allow-scripts allow-same-origin allow-popups"
     layout="responsive"
-    width="16" height="9" src="https://embed.theguardian.com/embed/atom/media/@media.id">
+    width="16" height="9" src="@Configuration.static.externalEmbedHost/embed/atom/media/@media.id">
         @if(media.posterUrl.isDefined){
-        <amp-img layout="fill" src="@media.posterUrl.get" placeholder="@media.posterUrl.get"></amp-img>
+        <amp-img layout="fill" src="@media.posterUrl.get" placeholder></amp-img>
     }
     </amp-iframe>
 
