--- a/common/app/views/fragments/atoms/ampYoutube.scala.html
+++ b/common/app/views/fragments/atoms/ampYoutube.scala.html
@@ -4,7 +4,7 @@
     <amp-iframe
     sandbox="allow-scripts allow-same-origin allow-popups"
     layout="responsive"
-    width="16" height="9" src="@Configuration.static.externalEmbedHost/embed/atom/media/@media.id">
+    width="16" height="9" src="@Configuration.Media.externalEmbedHost/embed/atom/media/@media.id">
         @if(media.posterUrl.isDefined){
         <amp-img layout="fill" src="@media.posterUrl.get" placeholder></amp-img>
     }
