--- a/common/app/views/fragments/atoms/ampYoutube.scala.html
+++ b/common/app/views/fragments/atoms/ampYoutube.scala.html
@@ -1,11 +1,16 @@
 @(media: model.content.MediaAtom)(implicit request: RequestHeader)
+@import conf.Configuration
+
+<amp-iframe
+sandbox="allow-scripts allow-same-origin allow-popups"
+layout="responsive"
+width="16" height="9" src="@Configuration.Media.externalEmbedHost/embed/atom/media/@media.id">
+@if(media.posterUrl.isDefined) {
+    <amp-img layout="fill" src="@media.posterUrl.get" placeholder></amp-img>
+}
+</amp-iframe>
 
 
-    <amp-youtube
-    data-videoid="@media.assets.head.id"
-    layout="responsive"
-    width="5" height="3" data-param-modestbranding="1" data-param-rel="0" data-param-showinfo="0">
-    </amp-youtube>
 
 
 
