--- a/applications/app/views/fragments/mediaBody.scala.html
+++ b/applications/app/views/fragments/mediaBody.scala.html
@@ -1,3 +1,4 @@
+@import views.support.ImgSrc
 @(page: MediaPage)(implicit request: RequestHeader)
 
 @import common.LinkTo
@@ -5,6 +6,7 @@
 @import views.support.Commercial.isPaidContent
 @import views.support.TrailCssClasses.toneClass
 @import views.support.{RenderClasses, SeoOptimisedContentImage, StripHtmlTags, Video640}
+@import model.content.MediaAtom
 
 @defining(page.media, page.media match { case _: Audio => "audio" case _ => "video" }) { case (media, mediaType) =>
     @defining(isPaidContent(media, page)) { isPaidContent =>
@@ -65,6 +67,14 @@
                                             <meta itemprop="datePublished" content="@video.trail.webPublicationDate.toString("yyyy-MM-dd")" />
                                             <meta itemprop="name" content="@video.metadata.webTitle" />
                                             <meta itemprop="uploadDate" content="@video.trail.webPublicationDate.toString("yyyy-MM-dd")" />
+
+                                            @video.mediaAtom.map { ma =>
+                                                @ma.duration.map { duration =>
+                                                    <meta itemprop="duration" content="@MediaAtom.isoDuration(duration)" />
+                                                }
+                                            }
+                                            @* TODO: Set meta thumbnail once we have better image data in model *@
+
                                             @video.elements.mainVideo.map { mv =>
                                                 <meta itemprop="duration" content="@mv.videos.ISOduration" />
                                                 <meta itemprop="height" content="@mv.videos.height" />
@@ -76,6 +86,10 @@
                                                 <meta itemprop="thumbnail" content="@SeoOptimisedContentImage.bestFor(img.images)" />
                                                 <meta itemprop="thumbnailUrl" content="@SeoOptimisedContentImage.bestFor(img.images)" />
                                             }
+                                            @video.mediaAtom.map { mediaAtom =>
+                                              @fragments.atoms.media(mediaAtom)
+                                            }
+
                                             @video.elements.mainVideo.map { videoElement =>
                                                 @fragments.media.video(
                                                     VideoPlayer(
