Factor out common <img> markup into EmailHelpers

--- a/article/app/views/fragments/emailArticleBody.scala.html
+++ b/article/app/views/fragments/emailArticleBody.scala.html
@@ -7,9 +7,14 @@
 
 @defining(page.article) { article =>
     @fullRow {
-        <a href="@article.metadata.webUrl" @page.email.map { email => title="View @email.name online"}>
-            <img width="580" class="full-width" src="@page.banner" @page.email.map { email => alt="View @email.name online"}>
-        </a>
+        @defining(page.email.map(_.name)) { emailName =>
+            @imageMaybeWithLink(
+                imageUrl = page.banner,
+                alt = emailName,
+                linkUrl = Some(article.metadata.webUrl),
+                linkTitle = emailName
+            )
+        }
     }
 
     @page.fallbackSeriesText.map { seriesName =>
@@ -83,13 +88,11 @@
                     case ImageBlockElement(media, data, showCredit) => {
                         @EmailImage.bestFor(media).map { imageUrl =>
                             @fullRow {
-                                @block.url.filter(_ => article.isLiveBlog).fold {
-                                    <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
-                                } { linkUrl =>
-                                    <a href="@linkUrl">
-                                        <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
-                                    </a>
-                                }
+                                @imageMaybeWithLink(
+                                    imageUrl = imageUrl,
+                                    alt = data.get("alt"),
+                                    linkUrl = block.url.filter(_ => article.isLiveBlog)
+                                )
                             }
 
                             @paddedRow {
@@ -113,13 +116,11 @@
                     case GuVideoBlockElement(video, media, data) => {
                         @EmailVideoImage.bestFor(media).map { imageUrl =>
                             @fullRow {
-                                @data.get("url").fold {
-                                    <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
-                                }{ linkUrl =>
-                                    <a href="@linkUrl">
-                                        <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
-                                    </a>
-                                }
+                                @imageMaybeWithLink(
+                                    imageUrl = imageUrl,
+                                    alt = data.get("alt"),
+                                    linkUrl = data.get("url")
+                                )
                             }
                         }
                     }
