--- a/static/src/javascripts/projects/common/views/contributions-epic.html
+++ b/static/src/javascripts/projects/common/views/contributions-epic.html
@@ -5,16 +5,15 @@
         <p class="contributions__paragraph contributions__paragraph--epic">... we have a small favour to ask. More people are reading the Guardian than ever. But far fewer are paying for it. And advertising revenues are falling
             fast. So you can see why we need to ask for your help. The Guardian's independent, investigative journalism takes a lot of time, money and hard work to produce. But we do it because we
             believe our perspective matters - because it might well be your perspective, too. </p>
-        <p class="contributions__paragraph contributions__paragraph--epic">If everyone who reads our reporting, who likes it, helps to pay for it, our future would be much more secure. You can
-            give money to the Guardian in less than a minute.</p>
+        <p class="contributions__paragraph contributions__paragraph--epic"><%=p2%></p>
     </div>
     <div class="contributions__amount-field">
         <div >
-            <a class="js-submit-input contributions__option-button contributions__contribute contributions__contribute--epic" href="<%=linkUrl%>" target="_blank">
-                Contribute
+            <a class="<%=cta1Class%> contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--epic-member" href="<%=linkUrl1%>" target="_blank">
+                <%=cta1%>
             </a>
         </div>
     </div>
-    <p class="contributions__paragraph contributions__paragraph--epic">Alterna </p>
-
+    <p class="contributions__paragraph contributions__paragraph--extra-copy contributions__<%=hidden%>">
+        <%=p3%> <a class="<%=cta2Class%> contributions__epic-link" href="<%=linkUrl2%>" target="_blank"><%=cta2%></a></p>
 </div>
