--- a/applications/app/views/fragments/mediaBody.scala.html
+++ b/applications/app/views/fragments/mediaBody.scala.html
@@ -5,7 +5,6 @@
 @import views.support.Commercial.isPaidContent
 @import views.support.TrailCssClasses.toneClass
 @import views.support.{RenderClasses, SeoOptimisedContentImage, StripHtmlTags, Video640}
-@import model.content.MediaAtom
 
 @defining(page.media, page.media match { case _: Audio => "audio" case _ => "video" }) { case (media, mediaType) =>
     @defining(isPaidContent(media, page)) { isPaidContent =>
@@ -72,7 +71,7 @@
                                                     <meta itemprop="duration" content="@ma.isoDuration" />
                                                 }
                                             }
-                                            @* TODO: Set meta thumbnail once we have better image data in model *@
+
 
                                             @video.elements.mainVideo.map { mv =>
                                                 <meta itemprop="duration" content="@mv.videos.ISOduration" />
@@ -86,6 +85,10 @@
                                                 <meta itemprop="thumbnailUrl" content="@SeoOptimisedContentImage.bestFor(img.images)" />
                                             }
                                             @video.mediaAtom.map { mediaAtom =>
+                                                @* TODO: Use poster URL for this once we have better image data in model *@
+                                                <meta itemprop="thumbnail" content="@Html(video.content.signedArticleImage)" />
+                                                <meta itemprop="thumbnailUrl" content="@Html(video.content.signedArticleImage)" />
+
                                               @fragments.atoms.media(mediaAtom)
                                             }
 
