--- a/static/src/javascripts/projects/common/views/membership-message.html
+++ b/static/src/javascripts/projects/common/views/membership-message.html
@@ -1,6 +1,9 @@
 <div id="site-message__message">
     <div class="site-message__message site-message__message--membership">
         <%=messageText%>
+        <span id="membership__engagement-message-button" class="message-button-rounded__cta is-hidden">
+            <span id="membership__engagement-message-button-caption"></span><span id="membership__engagement-message-button-arrow"><%=arrowWhiteRight%></span>
+        </span>
     </div>
     <a id="membership__engagement-message-link" class="u-faux-block-link__overlay" target="_blank" href="<%=linkHref%>" data-link-name="Read more link">
     </a>
