hosted gallery - wrap everything that goes within the 5:3 image fram in a new div, and resize that instead of each individual item

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
@@ -302,6 +302,15 @@
     }
 }
 
+.hosted-gallery__gallery-frame {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+}
+
 .hosted-gallery-page--container {
     position: absolute;
     top: 0;
@@ -481,7 +490,7 @@ $progressColor: #ffffff;
     position: absolute;
     top: 50%;
     margin-top: $progressHeight / -2;
-    right: -10px;
+    right: 0;
     height: $progressHeight;
     width: $progressHeight;
 
