--- a/commercial/app/views/hosted/guardianHostedGallery.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGallery.scala.html
@@ -38,6 +38,7 @@
         <div class="l-side-margins hosted__side">
             <section class="hosted-tone--dark hosted-gallery__gallery-section">
                 <div class="js-hosted-gallery-container hosted-gallery__gallery-container">
+                <div class="js-hosted-gallery-frame hosted-gallery__gallery-frame">
                     <div class="js-hosted-gallery-images hosted-gallery__images-container">
                         @guardianHostedGalleryImage(page.images.head, {
                             <div class="hosted-gallery__meta js-hosted-gallery-meta">
@@ -71,6 +72,7 @@
                         @fragments.inlineSvg("arrow-right", "icon", List("inline-arrow-down"))
                     </div>
                     @guardianHostedGalleryOj(page.cta.label, page.cta.url, page.cta.btnText, page.nextPages)
+                </div>
                 </div>
                 <div class="hosted__container hosted__container--content hosted-gallery__lower-bar js-gallery-caption-bar">
                     <header class="host__header hosted__social">
