--- a/commercial/app/views/hosted/guardianHostedGalleryCta.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGalleryCta.scala.html
@@ -1,5 +1,5 @@
 @(ctaText: Option[String], ctaLink: String, buttonText: Option[String])
-    <div class="hosted-gallery__cta js-hosted-gallery-cta">
+    <div class="hosted-gallery__cta js-hosted-gallery-cta hosted-gallery__small-captions-only">
         <div class="hosted-gallery__cta-title">
             @{ctaText}
         </div>
