--- a/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
@@ -1,6 +1,6 @@
 @import common.commercial.hosted.hardcoded.NextHostedPage
 @(ctaText: Option[String], ctaLink: String, buttonText: Option[String], nextPages: List[NextHostedPage])
-    <div class="hosted-gallery__oj js-hosted-gallery-oj">
+    <div class="hosted-gallery__oj js-hosted-gallery-oj hosted-gallery__small-captions-only">
         <div class="hosted-gallery__oj-cta hosted-tone-border">
             <div class="hosted-gallery__cta-title">
                 @{ctaText}
