--- a/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
@@ -1,3 +1,8 @@
+
+$headerHeight: 58px;
+$footerHeight: 46px;
+$approxGalleryWidth: calc(167vh - #{5/3 * ($headerHeight + $footerHeight)});
+
 .hosted-gallery__scroll-container {
     overflow-x: hidden;
     overflow-y: scroll;
@@ -302,6 +307,35 @@
     }
 }
 
+.small-captions .hosted-gallery__large-captions-only,
+.large-captions .hosted-gallery__small-captions-only {
+    display: none;
+}
+
+.hosted-gallery__enlarged-caption {
+    @include f-headlineSans;
+    position: absolute;
+    line-height: 26px;
+    font-size: 24px;
+    color: #ffffff;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+    padding: $gs-baseline $gs-gutter;
+    background: linear-gradient(to top, rgba(51, 51, 51, .9) 0%, rgba(51, 51, 51, .7) 50%, transparent 100%);
+    &.current-caption {
+        pointer-events: auto;
+        opacity: 1;
+    }
+    @include mq($until: tablet) {
+        padding-bottom: $footerHeight;
+        line-height: 20px;
+        font-size: 18px;
+    }
+}
+
 .hosted-gallery__gallery-frame {
     position: absolute;
     top: 0;
@@ -340,14 +374,9 @@
     height: calc(100% - 58px);
 }
 
-$headerHeight: 58px;
-$footerHeight: 46px;
-$approxGalleryWidth: calc(167vh - #{5/3 * ($headerHeight + $footerHeight)});
-
 .hosted-gallery-page {
     .hosted__headerwrap {
         width: $approxGalleryWidth;
-        max-width: 100%;
     }
     .hosted__social.host__header {
         padding: 0;
@@ -406,6 +435,9 @@ $approxGalleryWidth: calc(167vh - #{5/3 * ($headerHeight + $footerHeight)});
     &.current-caption {
         opacity: 1;
         visibility: visible;
+    }
+    .large-captions & {
+        right: $gs-gutter;
     }
 }
 
