--- a/article/app/views/fragments/emailArticleBody.scala.html
+++ b/article/app/views/fragments/emailArticleBody.scala.html
@@ -8,7 +8,7 @@
 @defining(page.article) { article =>
     @fullRow {
         <a href="@article.metadata.webUrl" @page.email.map { email => title="View @email.name online"}>
-            <img width="580" class="full-width" src="@page.banner" @page.email.map { email => alt="View @email.name online"}>
+            @img(src = page.banner, alt = page.email.map(_.name))
         </a>
     }
 
@@ -84,10 +84,10 @@
                         @EmailImage.bestFor(media).map { imageUrl =>
                             @fullRow {
                                 @block.url.filter(_ => article.isLiveBlog).fold {
-                                    <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
+                                    @img(src = imageUrl, alt = data.get("alt"))
                                 } { linkUrl =>
                                     <a href="@linkUrl">
-                                        <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
+                                        @img(src = imageUrl, alt = data.get("alt"))
                                     </a>
                                 }
                             }
@@ -114,10 +114,10 @@
                         @EmailVideoImage.bestFor(media).map { imageUrl =>
                             @fullRow {
                                 @data.get("url").fold {
-                                    <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
+                                    @img(src = imageUrl, alt = data.get("alt"))
                                 }{ linkUrl =>
                                     <a href="@linkUrl">
-                                        <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
+                                        @img(src = imageUrl, alt = data.get("alt"))
                                     </a>
                                 }
                             }
