--- a/common/app/views/fragments/inlineJSBlocking.scala.html
+++ b/common/app/views/fragments/inlineJSBlocking.scala.html
@@ -1,5 +1,5 @@
 @import common.InlineJs
-@import conf.switches.Switches.{AsyncCss, FontSwitch}
+@import conf.switches.Switches.{AsyncCss, FontSwitch, ElectionAppDelay}
 @import templates.inlineJS.blocking.js.{applyRenderConditions, cloudwatchBeacons, config, curlConfig, enableStylesheets, loadFonts, shouldEnhance}
 @import templates.inlineJS.blocking.polyfills.js.{classlist, details, matches, raf, setTimeout}
 
@@ -66,18 +66,30 @@
 
     // ************* LOAD THE MAIN APP ASYNC *************
 
+    @loadApp = {
+        @if(conf.Configuration.assets.useHashedBundles) {
+            // Polyfill for async script
+            (function (document) {
+                var script = document.createElement('script');
+                script.src = '@Static("javascripts/app.js")';
+                var ref = document.getElementsByTagName('script')[0];
+                ref.parentNode.insertBefore(script, ref);
+            })(document);
+        } else {
+            @Html(common.Assets.js.curl);
+            require(['boot']);
+        }
+    }
 
-    @if(conf.Configuration.assets.useHashedBundles) {
-        // Polyfill for async script
-        (function (document) {
-            var script = document.createElement('script');
-            script.src = '@Static("javascripts/app.js")';
-            var ref = document.getElementsByTagName('script')[0];
-            ref.parentNode.insertBefore(script, ref);
-        })(document);
+    @if(ElectionAppDelay.isSwitchedOn) {
+        window.guardian.triggerLoadApp = function () {
+            @loadApp
+        };
+        if (!window.guardian.config.page.atoms || window.guardian.config.page.atoms[0] !== "2016/general-election") {
+            window.guardian.triggerLoadApp();
+        }
     } else {
-        @Html(common.Assets.js.curl);
-        require(['boot']);
+        @loadApp
     }
 
 
